--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
     <Button
         android:id="@+id/scan_button"
         android:layout_width="wrap_content"
+        android:textColor="@color/white"
         android:text="Scan"
         android:layout_height="wrap_content"/>
 
