--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -4,14 +4,42 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
+    <Button
+        android:id="@+id/scan_button"
         android:layout_width="wrap_content"
+        android:textColor="@color/white"
+        android:text="찾기"
         android:layout_height="wrap_content"
-        android:text="Main Fragment"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <com.google.android.material.switchmaterial.SwitchMaterial
+        android:id="@+id/bluetooth_toggle_button"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="블루투스 켜기"
+        android:layout_marginHorizontal="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/scan_button" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/paired_device_list"
+        android:layout_width="0dp"
+        android:layout_height="300dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/bluetooth_toggle_button"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/connectable_device_list"
+        android:layout_width="0dp"
+        android:layout_height="300dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/paired_device_list"/>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
