--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/main_fragment"
-        android:name="com.lgtm.i_am_home.MainFragment" >
+        android:name="com.lgtm.i_am_home.presentation.MainFragment" >
         <action
             android:id="@+id/action_compass_fragment_to_mapFragment"
             app:destination="@id/subFragment" />
