--- a/app/src/main/res/layout/device_item.xml
+++ b/app/src/main/res/layout/device_item.xml
@@ -3,14 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="16dp"
-
+    android:background="?attr/selectableItemBackground"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
         android:id="@+id/device_type_icon"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:src="@drawable/ic_launcher_background"
+        android:src="@drawable/ic_baseline_perm_device_information_24"
         android:layout_marginEnd="4dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/device_name"
@@ -22,6 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Desktop ABC-123"
+        android:textColor="@color/white"
         android:layout_marginEnd="4dp"
         app:layout_constraintStart_toEndOf="@id/device_type_icon"
         app:layout_constraintEnd_toStartOf="@id/device_address"
@@ -33,6 +34,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="C3:10:40"
+        android:textColor="@color/white"
         app:layout_constraintStart_toEndOf="@id/device_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
